--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,10 @@
-<h1>Quiz demo...</h1>
-<router-outlet></router-outlet>
+<div class="container mb-3">
+  <div class="jumbotron">
+    <h1 class="display-4">Quiz Demo!</h1>
+    <p class="lead">This project basically is a challenge provided by ZipDev.</p>
+    <hr class="my-4">
+    <p>Any comments please feel free to send an email to majahide.payan@hotmail.com.</p>
+  </div>
+
+  <router-outlet></router-outlet>
+</div>
