--- a/src/app/Quiz/Quiz.component.html
+++ b/src/app/Quiz/Quiz.component.html
@@ -1,14 +1,14 @@
 <h2>Quiz Name</h2>
-<p>...</p>
 <hr/>
 
 <app-Question [question]="currentQuestion" (valueChanged)="onResponse($event)" ></app-Question>
 
-<div>
+<div class="progress mt-3 mb-3">
+  <div class="progress-bar progress-bar-striped" role="progressbar" [style.width]="getPercentage()" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
+</div>
+
+<div class="text-right">
   <button [disabled]="!isStepChanged" (click)="onNextQuestion();" *ngIf="stepsControl.currentStep < stepsControl.steps" class="btn btn-primary">Next</button>
   <button [disabled]="!isStepChanged" (click)="onFinish();" *ngIf="stepsControl.currentStep === stepsControl.steps" class="btn btn-success">Finish</button>
 </div>
 
-<div class="progress">
-<div class="progress-bar progress-bar-striped" role="progressbar" [style.width]="getPercentage()" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
-</div>
