--- a/src/app/Responses/Responses.component.html
+++ b/src/app/Responses/Responses.component.html
@@ -1,50 +1,47 @@
 <div>
-  <h2>Resoibses...</h2>
+  <h2 class="lead">Thank you for your responses...</h2>
+  
   <!-- Question 1 -->
-  <div class="row">
-    <div class="col-4">
-      {{answers[0].question}}
+  <div class="row mb-2">
+    <div class="col-sm-12 col-md-4 col-lg-6">
+      <span><strong>{{answers[0].question}}</strong></span>
     </div>
-    <div class="col-8">
+    <div class="col-sm-12 col-md-8 col-lg-6">
       <div [innerHTML]="validateResponses(answers[0], responses[1])"></div>
     </div>
   </div>
 
   <!-- Question 2 -->
-  <div class="row">
-    <div class="col-4">
-      {{answers[1].question}}
+  <div class="row mb-2">
+    <div class="col-sm-12 col-md-4 col-lg-6">
+      <span><strong>{{answers[1].question}}</strong></span>
     </div>
-    <div class="col-8">
-      <div [innerHTML]="validateResponses(answers[1], responses[2])"></div>
+    <div class="col-sm-12 col-md-8 col-lg-6">
+      <div [innerHTML]="validateResponses(answers[1], responses[2])">
+      </div>
     </div>
+ </div>
+
+ <!-- Question 3 -->
+ <div class="row mb-2">
+  <div class="col-sm-12 col-md-4 col-lg-6">
+    <span><strong>{{answers[2].question}}</strong></span>
   </div>
-
-  <!-- Question 3 -->
-  <div class="row">
-    <div class="col-4">
-      {{answers[2].question}}
-    </div>
-    <div class="col-8">
-      <div [innerHTML]="validateResponses(answers[2], responses[3])"></div>
-    </div>
+  <div class="col-sm-12 col-md-8 col-lg-6">
+    <div [innerHTML]="validateResponses(answers[2], responses[3])"></div>
   </div>
-
-  <!-- Question 4 -->
-  <div class="row">
-    <div class="col-4">
-      {{answers[3].question}}
-    </div>
-    <div class="col-8">
-      <div [innerHTML]="validateResponses(answers[3], responses[4])"></div>
-    </div>
-  </div>
-
-  <app-RestaurantPicker></app-RestaurantPicker>
-
-
-
 </div>
 
+ <!-- Question 4 -->
+ <div class="row mb-2">
+  <div class="col-sm-12 col-mb-4 col-lg-6">
+    <span><strong>{{answers[3].question}}</strong></span>
+  </div>
+  <div class="col-sm-12 col-mb-8 col-lg-6">
+    <div [innerHTML]="validateResponses(answers[3], responses[4])"></div>
+  </div>
+</div>
 
+<hr/>
 
+<app-RestaurantPicker></app-RestaurantPicker>
